--- a/src/main/resources/localization/RedMageCards.json
+++ b/src/main/resources/localization/RedMageCards.json
@@ -1,10 +1,10 @@
 {
-  "RDM:Strike": {
+  "RDM:Strike_RDM": {
     "NAME": "Strike",
     "DESCRIPTION": "Deal !D! damage.",
     "UPGRADE_DESCRIPTION": ""
   },
-  "RDM:Defend": {
+  "RDM:Defend_RDM": {
     "NAME": "Defend",
     "DESCRIPTION": "Gain !B! Block.",
     "UPGRADE_DESCRIPTION": ""
